force-app/main/default/objects/copado__Environment__c/fields/Refresh_Context_ID__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Context_ID__c</fullName>
    <formula>Refresh_User_Story__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refresh Context ID</label>
    <type>Text</type>
</CustomField>