force-app/main/default/objects/copado__Environment__c/fields/Refresh_User_Story__c.field-meta.xml
<CustomField>
    <fullName>Refresh_User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Refresh User Story</label>
    <referenceTo>copado__User_Story__c</referenceTo>
    <relationshipLabel>Environments</relationshipLabel>
    <relationshipName>Environments</relationshipName>
    <type>Lookup</type>
</CustomField>