force-app/main/default/objects/copado__Environment__c/listViews/copado__All.listView-meta.xml
<ListView>
    <fullName>copado__All</fullName>
    <columns>NAME</columns>
    <columns>copado__Compliance_Rule_Group__c</columns>
    <columns>copado__Platform__c</columns>
    <columns>copado__Compliance_Scan_Events__c</columns>
    <columns>copado__Type__c</columns>
    <columns>copado__Minimum_Apex_Test_Coverage__c</columns>
    <columns>copado__Run_all_tests__c</columns>
    <columns>copado__Current_SCA_Score__c</columns>
    <columns>copado__Org_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>